--- a/1-HTML/1-3-html-tables/table.css
+++ b/1-HTML/1-3-html-tables/table.css
@@ -1,7 +1,7 @@
 table{
-    width: 400%;
-    padding: 10px;
-    border: 10px;
+    width: 400;
+    padding: 10;
+    border: 2;
     
     
     
