--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -45,6 +45,7 @@ main {
   background-color: white;
   line-height: 1.8em;
   color: #555;
+  border-radius: 25px;
 }
 h3 {
   text-transform: uppercase;
@@ -62,8 +63,13 @@ p.more {
 aside {
   background: url(images/scallop.png) repeat-y left top;
   background-color: #F6F3ED;
+  border-radius: 25px;
+  border-top-right-radius: 25px;
+  
+  
 }
-/* misc styles */
+  
+  /* misc styles */
 footer {
   color: #EADDC4;
   text-align: center;
