--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -3,6 +3,7 @@ body {
   font-family: Georgia, serif;
   font-size: 100%;
   background-color: white;
+  margin: 0;
 }
 
 /* link styles */
@@ -20,6 +21,7 @@ header {
 header p {
   font-style: italic;
   font-size: 1.2em;
+  margin-top: -12px;
 }
 
 /* nav styles */
@@ -37,6 +39,15 @@ nav ul li {
   font-size: .8em;
   text-transform: uppercase;
   letter-spacing: .2em;
+  
+}
+
+nav, ul{
+ margin: 0;
+}
+
+header, h1{
+  margin-top: 1.5em;
 }
 
 /* main "products" styles */
@@ -46,12 +57,17 @@ main {
   line-height: 1.8em;
   color: #555;
   border-radius: 25px;
+  margin: 2.5%;
 }
 h3 {
   text-transform: uppercase;
   letter-spacing: .2em;
   color: #7A0002;
+  margin: 2.5em;
 }
+
+
+
 p.more {
   font-family: verdana, sans-serif;
   text-transform: uppercase;
@@ -65,8 +81,10 @@ aside {
   background-color: #F6F3ED;
   border-radius: 25px;
   border-top-right-radius: 25px;
-  
-  
+  margin-top: 1em;
+  margin-right: 2.5%;
+  margin-bottom: 0;
+  margin-left: 10%;
 }
   
   /* misc styles */
