--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -73,6 +73,7 @@ p.more {
   text-transform: uppercase;
   font-size: .8em;
   border: double 4px #EADDC4;
+  clear: left;
 }
 
 /* aside "hours" styles */
@@ -101,4 +102,13 @@ h2 {
   font-family: verdana, sans-serif;
   font-size: .8em;
   text-transform: uppercase;
+}
+
+main img {
+float: left;
+margin: 0 1em 1em 0;
+}
+
+img[src*="muffin"]{
+  margin-left: 50px;
 }
