--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -112,3 +112,7 @@ margin: 0 1em 1em 0;
 img[src*="muffin"]{
   margin-left: 50px;
 }
+
+img[src*="bread"]{
+-webkit-shape-outside: circle(125px)
+shape-outside
