--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -111,8 +111,7 @@ margin: 0 1em 1em 0;
 
 img[src*="muffin"]{
   margin-left: 50px;
+shape-outside: circle(110px);
+  -webkit-shape-outside: circle(110px);
 }
 
-img[src*="bread"]{
--webkit-shape-outside: circle(125px)
-shape-outside
