--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -11,12 +11,24 @@ a:link, a:visited { color: #DC6903; }
 a:focus, a:hover, a:active { color: #F9AB33; }
 
 
+
+
+html{
+  box-sizing: border-box;
+  
+  
+  
+  
+  
+}
+
 /* header styles */
 header {
   color: white;
   background:  url(images/croissants_banner.jpg) no-repeat center center;
   background-size: cover; 
   text-align: center;
+  height: 15em;
 }
 header p {
   font-style: italic;
@@ -58,12 +70,16 @@ main {
   color: #555;
   border-radius: 25px;
   margin: 2.5%;
+  padding: 1em;
 }
 h3 {
   text-transform: uppercase;
   letter-spacing: .2em;
   color: #7A0002;
   margin: 2.5em;
+  border-top: 1px solid;
+  border-left: 3px solid;
+  padding-left: 1em;
 }
 
 
