--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -15,13 +15,14 @@ a:focus, a:hover, a:active { color: #F9AB33; }
 
 html{
   box-sizing: border-box;
-  
-  
-  
-  
-  
+  box-sizing: inherit;
 }
 
+a{
+  text-decoration: none;
+  border-bottom: 1px dotted;
+  padding-bottom: .2em;
+}
 /* header styles */
 header {
   color: white;
@@ -71,6 +72,7 @@ main {
   border-radius: 25px;
   margin: 2.5%;
   padding: 1em;
+  border: double 4px #EADDC4;
 }
 h3 {
   text-transform: uppercase;
@@ -102,6 +104,9 @@ aside {
   margin-right: 2.5%;
   margin-bottom: 0;
   margin-left: 10%;
+  border-top-right-radius: 25px;
+  padding: 1em;
+  padding-left: 45px;
 }
   
   /* misc styles */
@@ -109,6 +114,7 @@ footer {
   color: #EADDC4;
   text-align: center;
   font-size: .8em;
+  padding: 1em;
 }
 h2 {
   font-family: 'Stint Ultra Expanded', cursive;
