--- a/2-CSS/bakery-styles.css
+++ b/2-CSS/bakery-styles.css
@@ -55,8 +55,26 @@ nav ul li {
   
 }
 
+nav ul li a{
+  display: block;
+  border: 1px solid;
+  border-radius: .5emS;
+  padding: .5em 1em;
+  margin: .5em;
+  
+  
+}
+
+
+
+
+
 nav, ul{
  margin: 0;
+ padding: 0;
+ list-style-type: none;
+ display: flex;
+ 
 }
 
 header, h1{
