--- a/2-CSS/bakery-rwd.css
+++ b/2-CSS/bakery-rwd.css
@@ -184,8 +184,12 @@ main{
 	#container{
 		display: grid;
 		grid-template-rows: auto min-height 5em;
-		
-		
+		grid-template-columns: minmax(25em 1fr) 16em;
+		grid-template-areas:
+		"banner banner"
+		"main hours"
+		"footer footer";
+		max-width: 1200px;
 	}
 	
 	
